# NS_backend

./: .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 360da81680de_add_unique_constraints_to_code_column_.py  bb77ca1a56c4_add_user_course_association_table.py
src/: main.py  seed.py
src/util/: config.py  db.py  exception.py  log.py  redis_client.py  response.py
src/v1/admin/: notes.txt  routes.py  schema.py  service.py  test_timetable_data.py
src/v1/auth/: authorization.py  routes.py  schema.py  service.py
src/v1/base/: exception.py  model.py  schema.py
src/v1/controllers/: courses.py  level.py  school.py  user.py  util.py
src/v1/model/: __init__.py  timetable.py  user.py
src/v1/schema/: courses.py  timetable.py  user.py
src/v1/service/: courses.py  lecturer_service.py  level_service.py  semester_service.py  student_service.py  timetable_service.py  user.py  venue_service.py
